[project]
name = "ogd-autocoder"
version = "0.1.0"
description = "Tool for human coding of Event data, with integration to feature extraction and automated building of models to apply codes to new data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.0",
    "statsmodels>=0.14.5",
    "tensorflow>=2.16.2",
]
